--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>underrated animals</title>
 
-    <link rel="stylesheet" href="\Users\atl\Desktop\summer 2022\underated animals\style.css">
+    <link rel="stylesheet" href="underrated-animals/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
