--- a/home.html
+++ b/home.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>underrated animals</title>
 
+    <link rel="stylesheet" href="\Users\atl\Desktop\summer 2022\underated animals\style.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
@@ -58,6 +60,11 @@
       width: 10%;
       }
 
+      img {
+        width: 500px;
+        padding-left: 25px;
+      }
+
       .content {
         text-align: center;
         margin-top: 50px;
@@ -96,6 +103,7 @@
 
     <div id="ant" class="t1">
       <h2>anteater</h2>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Myrmecophaga_tridactyla_-_Phoenix_Zoo.jpg/1920px-Myrmecophaga_tridactyla_-_Phoenix_Zoo.jpg" alt="full length anteater">
       <p>
         - anteaters are south american mammals that eat ants and termites <br>
         - they grow to between 1.8m and 2.2m long <br>
@@ -105,6 +113,7 @@
 
     <div id="alp" class="t2">
       <h2>alpine marmot</h2>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/Marmota_marmota_Alpes2.jpg" alt="chubby boi">
       <p>
         - large ground squirrels native to the alps and other mountainous areas in europe <br>
         - it can weigh between 1.9kg and 8kg <br>
@@ -115,6 +124,7 @@
 
     <div id="cap" class="t1">
       <h2>capybara</h2>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Capybara_Eating_Hay_11_11_2018.jpg/1280px-Capybara_Eating_Hay_11_11_2018.jpg" alt="capybara eats grass">
       <p>
         - capybaras are large rodents native to south america <br>
         - they are the largest species of rodents <br>
@@ -125,6 +135,7 @@
 
     <div id="wal" class="t2">
       <h2>red-necked wallaby</h2>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/7/74/Red_necked_wallaby444.jpg" alt="wallaby">
       <p>
         - red-necked wallabies are medium marsupials similar to kangaroos <br>
         - they are native to southern australia and tasmania <br>
